--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-tag": "^2.0.0",
+    "hexo-minify": "^1.8.1",
     "hexo-pangu": "^0.2.2",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
