--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "colorjs.io": "^0.4.5",
     "hexo": "^6.3.0",
+    "hexo-abbrlink": "^2.2.1",
     "hexo-deployer-git": "^4.0.0",
     "hexo-filter-nofollow": "^2.0.2",
     "hexo-generator-archive": "^2.0.0",
@@ -27,8 +28,8 @@
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
+    "hexo-symbols-count-time": "^0.7.1",
     "hexo-tag-mmedia": "^1.2.1",
-    "hexo-word-counter": "^0.1.0",
     "stylus": "^0.60.0"
   }
 }
