--- a/_config.dev.yaml
+++ b/_config.dev.yaml
@@ -40,10 +40,10 @@ geodata-loader: "memconservative" # GEO 文件加载模式 standard/memconservat
 geo-auto-update: true # 自动更新 GEO 是否启用,可选 true/false
 geo-update-interval: 12 # 更新间隔,单位 h
 geox-url: # 自定 GEO 下载地址
-  geoip: "https://github.tmby.shop/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/release/geoip.dat"
-  geosite: "https://github.tmby.shop/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/release/geosite.dat"
-  mmdb: "https://github.tmby.shop/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/release/country.mmdb"
-  asn: "https://github.tmby.shop/https://raw.githubusercontent.com/xishang0128/geoip/release/GeoLite2-ASN.mmdb"
+  geoip: "https://code-dev.webcache.cn/gh/MetaCubeX/meta-rules-dat@release/geoip.dat"
+  geosite: "https://code-dev.webcache.cn/gh/MetaCubeX/meta-rules-dat@release/geosite.dat"
+  mmdb: "https://code-dev.webcache.cn/gh/MetaCubeX/meta-rules-dat@release/country.mmdb"
+  asn: "https://code-dev.webcache.cn/gh/xishang0128/geoip@release/GeoLite2-ASN.mmdb"
 
 external-ui: "./ui" # 外部用户界面的路径
 external-ui-name: "metacubexd" # 自定义外部用户界面名字
