fix: 分离各风格的配置文件以待合并

--- a/_config.csh.yaml
+++ b/_config.csh.yaml
@@ -194,36 +194,21 @@ proxy_providers_override: &proxy_providers_override
   ip-version: "dual" # 设置节点使用 IP 版本,默认使用 dual ; dual/ipv4/ipv6/ipv4-prefer/ipv6-prefer
 
 proxy-providers:
-  "SakuraCat": # 机场名称
-    type: http # 必须, provider 类型,可选 http/file
-    url: https://conv.lynx3.top/provider?url=https%3A%2F%2F0b96e976-9ec3-44c0-aa2b-30bf8b0792ea.com%2Fapi%2Fv1%2Fclient%2Fsubscribe%3Ftoken%3D6040efb108614cb278ee535206540f11 # 注意!如果您的链接中带有“&”字符,请删掉.
-    path: ./proxy_providers/Subscription_1.yaml # 机场配置保存位置
-    # proxy: 🌐 绕过代理
+  "超实惠":
+    type: http
+    url: "https://conv.lynx3.top/provider?url=https%3A%2F%2Fcf.25054128.xyz%2Fapi%2Fv1%2Fclient%2Fsubscribe%3Ftoken%3D4cb2c2881e16545a66975b2c399741c6"
+    path: "./proxy_providers/Subscription_2.yaml"
+    # proxy: "🧭 代理规则"
     header:
-      <<: *proxy_providers_header # 引用相关锚点
-    health-check: # 延迟测试
-      enable: true # 是否启用,可选 true/false
+      <<: *proxy_providers_header
+    health-check:
+      enable: true
       <<: *proxy_providers_health_check
-    override: # 覆写节点内容
+    override:
       <<: *proxy_providers_override
-      additional-prefix: "【SC】" # 为节点名称添加固定前缀
-    exclude-filter: "(?i)前往|加入|群|流量|过期|回国|CN|安徽|北京|重庆|福建|甘肃|广东|广西|贵州|海南|河北|黑龙江|河南|湖北|湖南|吉林|江苏|江西|辽宁|内蒙古|宁夏|青海|山东|山西|陕西|上海|四川|天津|西藏|新疆|云南|浙江" # 过滤回国等..
-  #   exclude-type: "ss|http" # 根据节点类型排除
-  # "Subscription_2":
-  #   type: http
-  #   url: "订阅"
-  #   path: "./proxy_providers/Subscription_2.yaml"
-  #   proxy: "🧭 代理规则"
-  #   header:
-  #     <<: *proxy_providers_header
-  #   health-check:
-  #     enable: true
-  #     <<: *proxy_providers_health_check
-  #   override:
-  #     <<: *proxy_providers_override
-  #     additional-prefix: "【02】| "
-  #   exclude-filter: "(?i)前往|加入|群|流量|过期|回国|CN|安徽|北京|重庆|福建|甘肃|广东|广西|贵州|海南|河北|黑龙江|河南|湖北|湖南|吉林|江苏|江西|辽宁|内蒙古|宁夏|青海|山东|山西|陕西|上海|四川|天津|西藏|新疆|云南|浙江"
-  #   exclude-type: "ss|http"
+      additional-prefix: "【超实惠】"
+    exclude-filter: "(?i)前往|加入|群|流量|过期|套餐|到期|回国|CN|安徽|北京|重庆|福建|甘肃|广东|广西|贵州|海南|河北|黑龙江|河南|湖北|湖南|吉林|江苏|江西|辽宁|内蒙古|宁夏|青海|山东|山西|陕西|上海|四川|天津|西藏|新疆|云南|浙江"
+    # exclude-type: "ss|http"
 
 #################### 策略组 ####################
 proxy_groups_use_load_balance: &proxy_groups_use_load_balance {type: load-balance, include-all-providers: true, strategy: consistent-hashing} # strategy: consistent-hashing/round-robin/sticky-sessions
