--- a/_config.ssy.yaml
+++ b/_config.ssy.yaml
@@ -194,7 +194,7 @@ proxy_providers_override: &proxy_providers_override
   ip-version: "dual" # 设置节点使用 IP 版本,默认使用 dual ; dual/ipv4/ipv6/ipv4-prefer/ipv6-prefer
 
 proxy-providers:
-  "超实惠":
+  "山水云":
     type: http
     url: "https://conv.lynx3.top/provider?url=https%3A%2F%2Fs1.ssysub1.xyz%2Fapi%2Fv1%2Fclient%2Fsubscribe%3Ftoken%3Dafd13d8dd3876a718a50222c6896b962"
     path: "./proxy_providers/Subscription_3.yaml"
@@ -206,7 +206,7 @@ proxy-providers:
       <<: *proxy_providers_health_check
     override:
       <<: *proxy_providers_override
-      additional-prefix: "【山水】"
+      additional-prefix: "【山水云】"
     exclude-filter: "(?i)前往|加入|群|流量|过期|套餐|到期|回国|CN|安徽|北京|重庆|福建|甘肃|广东|广西|贵州|海南|河北|黑龙江|河南|湖北|湖南|吉林|江苏|江西|辽宁|内蒙古|宁夏|青海|山东|山西|陕西|上海|四川|天津|西藏|新疆|云南|浙江"
     # exclude-type: "ss|http"
 
